--- a/templates/partials/author-box.hbs
+++ b/templates/partials/author-box.hbs
@@ -1,5 +1,5 @@
 <article id="author-box">
     <img src="/assets/images/portrait-small.png" width="260" height="260" class="featured-image">
 
-    <p>While technological advances stopped others, she continued seeing the mystical beings that share our world.</p>
+    <p>While technological advances stopped others, at least one continued seeing the mystical beings that share our world.</p>
 </article>
