--- a/templates/partials/site-header.hbs
+++ b/templates/partials/site-header.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     {{#if excerpt}}<meta name="description" content="{{ excerpt }}">{{/if}}
     <title>{{ siteTitle title }}</title>
     <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet">
