Add sanity check of built HTML

--- a/templates/layouts/index.hbs
+++ b/templates/layouts/index.hbs
@@ -5,24 +5,22 @@ layout: master
     {{> sidebar }}
     <main id="content">
             <header>
-                <article>
-                    <p>Don't let the modern world trick you;<br>
-                    not everything is as it seems.<br>
-                    Magic exists in the shadows,<br>
-                    it glitters and glimmers and gleams.</p>
+                <p>Don't let the modern world trick you;<br>
+                not everything is as it seems.<br>
+                Magic exists in the shadows,<br>
+                it glitters and glimmers and gleams.</p>
 
-                    <p>Mist-fairies dance in the dawnlight;<br>
-                    a fiddler still plays by the falls;<br>
-                    the forest is guarded by skogsrå.<br>
-                    They know you can sense through the walls.</p>
+                <p>Mist-fairies dance in the dawnlight;<br>
+                a fiddler still plays by the falls;<br>
+                the forest is guarded by skogsrå.<br>
+                They know you can sense through the walls.</p>
 
-                    <p>Ancestral roads do remember,<br>
-                    as does the far-reaching sea.<br>
-                    Red granite cliffs lines the King's way;<br>
-                    together let's walk: you and me.</p>
+                <p>Ancestral roads do remember,<br>
+                as does the far-reaching sea.<br>
+                Red granite cliffs lines the King's way;<br>
+                together let's walk: you and me.</p>
 
-                    <footer class="byline">Marie Hogebrandt</footer>
-                </article>
+                <p class="byline">Marie Hogebrandt</p>
             </header>
             <h2>{{ pageTitle }}</h2>
             {{#markdown}}
