--- a/templates/partials/author-box.hbs
+++ b/templates/partials/author-box.hbs
@@ -1,5 +1,6 @@
 <article id="author-box">
-    <img src="/assets/images/portrait-small.png" width="260" height="260" class="featured-image">
+    <h3>Marie Hogebrandt</h3>
+    <img src="/assets/images/portrait-small.png" width="260" height="260" class="featured-image" alt="Sepia portrait of Marie Hogebrandt">
 
     <p>While technological advances stopped others, at least one continued seeing the mystical beings that share our world.</p>
 </article>
