--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -216,7 +216,7 @@ main header {
         background-size: 100% 100%;
         width: 100%;
 
-        footer {
+        .byline {
             text-indent: 8rem;
         }
     }
