Note on when page was last updated
The calculation is based on the last-modified date of the .md file
that is the base page.

--- a/templates/partials/footer-links.hbs
+++ b/templates/partials/footer-links.hbs
@@ -7,3 +7,6 @@
     <li><a href="/colophone">Colophone</a></li>
     <li><a href="http://smaty.se">Copyright &copy; 2015</a></li>
 </ul>
+<ul>
+    <li>Last updated {{ lastUpdated }}</li>
+</ul>
