--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -1,14 +1,134 @@
-.l-container {
-    @extend %container;
-    @extend .clearfix;
+/*
+*
+*  Golden Grid System (1.0) <http://goldengridsystem.com/>
+*  by Joni Korpi        <http://jonikorpi.com/>
+*  licensed under MIT     <http://opensource.org/licenses/mit-license.php>
+*
+*/
+
+
+
+/*
+*
+* Zoomable baseline grid
+* type size presets
+*
+*/
+
+
+/*
+*
+*  Four-column grid active
+*  ----------------------------------------
+*  Margin   | #  1   2   3   4   |   Margin
+*  5.55555% | %  25  50  75  100 | 5.55555%
+*
+*/
+
+/*
+*  Simple elastic gutters
+*  Note: box-sizing will not work in IE6-7
+*/
+
+.wrapper {
+    padding: 0 #{($line/2)/$em}em;
+    box-sizing: border-box;
 }
 
-%stitched {
-    background: url('/assets/images/sepia-linen.jpg');
-    padding: 2rem;
-    border: 2px dashed $white;
-    border-radius: 10px;
-    box-shadow: 0 0 0 4px $sepia-medium-dark, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+
+/*
+*
+*  Fixes for IE6-8
+*  http://jonikorpi.com/leaving-old-IE-behind/
+*
+*/
+
+.ie body {
+  width: #{640/$em}em;
+  margin: 0 auto;
+}
+
+/* @media screen and (min-width: 640px) */
+@media screen and (min-width: 40em) {
+
+}
+
+
+/*
+*
+*  Eight-column grid active
+*  ----------------------------------------------------------------------
+*  Margin   | #  1     2     3     4     5     6     7     8   |   Margin
+*  5.55555% | %  12.5  25.0  37.5  50.0  62.5  75.0  87.5  100 | 5.55555%
+*
+*
+*/
+
+/* @media screen and (min-width: 720px) */
+@media screen and (min-width: 45em) {
+
+}
+
+
+/* @media screen and (min-width: 888px) */
+@media screen and (min-width: 55.5em) {
+
+}
+
+
+/* @media screen and (min-width: 984px) */
+@media screen and (min-width: 61.5em) {
+
+}
+
+
+/* @media screen and (min-width: 1200px) */
+@media screen and (min-width: 75em) {
+
+}
+
+
+/* @media screen and (min-width: 1392px) */
+@media screen and (min-width: 87em) {
+
+}
+
+
+/* @media screen and (min-width: 1680px) */
+@media screen and (min-width: 105em) {
+
+}
+
+
+/*
+*
+*  Sixteen-column grid active
+*  ----------------------------------------------------------------------------------------------------------------------
+*  Margin   | #  1     2     3     4     5     6     7     8     9     10    11    12    13    14    15    16  |   Margin
+*  5.55555% | %  6.25  12.5  18.75 25.0  31.25 37.5  43.75 50.0  56.25 62.5  68.75 75.0  81.25 87.5  93.75 100 | 5.55555%
+*
+*
+*/
+
+/* @media screen and (min-width: 1872px) */
+@media screen and (min-width: 117em) {
+
+}
+
+
+/* @media screen and (min-width: 2080px) */
+@media screen and (min-width: 130em) {
+
+    body {
+        /* Zoom baseline grid to 18/16 = 1.125 */
+        max-width: (2560/$em)em;
+    }
+
+}
+
+.l-container {
+    @extend %container;
+    @extend %clearfix;
 }
 
 [role=banner],
@@ -25,7 +145,7 @@ main,
     border: lighten($green-light, 20) 2px dashed;
     color: lighten($green-light, 20);
     font-style: italic;
-    @extend .clearfix;
+    @extend %clearfix;
 
     img {
         padding-bottom: 2rem;
