--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,63 +5,25 @@ html * {
     box-sizing: border-box;
 }
 
-.clearfix:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-}
-.clearfix { display: inline-block; }
-/* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
-/* close commented backslash hack */
 
 @import "colours";
 @import "variables";
+@import "system/mixins";
+@import "system/functions";
+@import "system/anonymous-styles";
 
-@import "GGS";
+// Bower
 @import "typeplate-starter-kit/scss/typeplate";
+
+@import "typeface";
 
 @import "layout";
 @import "navigation";
 @import "images";
 @import "list";
 
-// [todo] - Break out into another include
-@font-face {
-  font-family: 'Atreyu';
-  src: url('/assets/fonts/atreyu/Atreyu.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-}
-
-@font-face {
-  font-family: 'Linux Libertine';
-  src: url('/assets/fonts/linux-libertine/LinLibertine_R.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Linux Libertine';
-  src: url('/assets/fonts/linux-libertine/LinLibertine_RI.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Linux Libertine';
-  src: url('/assets/fonts/linux-libertine/LinLibertine_RBI.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Linux Libertine';
-  src: url('/assets/fonts/linux-libertine/LinLibertine_RB.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-  font-weight: bold;
-  font-style: normal;
+.clearfix {
+    @extend %clearfix;
 }
 
 a {
