--- a/templates/partials/site-footer.hbs
+++ b/templates/partials/site-footer.hbs
@@ -11,5 +11,23 @@
 
 <script src="/assets/scripts/main.js"></script>
 <!-- endbuild -->
+{{#if hasTwitter}}
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
+{{/if}}
 </body>
 </html>
