Prepare for better cross-browser capabilities
- Install bramstein/fontfaceobserver to add the `fonts-loaded` class
  once the fonts are loaded
- Conditional classes, class `ie` on HTML when using IE < 9

--- a/templates/partials/site-footer.hbs
+++ b/templates/partials/site-footer.hbs
@@ -4,11 +4,14 @@
     {{>footer-links}}
 </footer>
 </div>
+<!-- smoosh -->
+<script src="/node_modules/fontfaceobserver/fontfaceobserver.standalone.js"></script>
+<script src="/assets/scripts/fontLoader.js"></script>
+<!-- endsmoosh -->
 <!-- build:js /assets/scripts/foot.js -->
 <!-- bower:js -->
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <!-- endbower -->
-
 <script src="/assets/scripts/main.js"></script>
 <!-- endbuild -->
 {{#if hasTwitter}}
