--- a/assets/styles/base/_typeface.scss
+++ b/assets/styles/base/_typeface.scss
@@ -1,10 +1,12 @@
 @font-face {
     font-family: 'Atreyu';
+    src: url('/assets/fonts/atreyu/Atreyu-webfont.eot'); /* IE9 Compat Mode */
     src: url('/assets/fonts/atreyu/Atreyu.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 @font-face {
     font-family: 'Linux Libertine';
+    src: url('/assets/fonts/linux-libertine/LinLibertine_R-webfont.eot'); /* IE9 Compat Mode */
     src: url('/assets/fonts/linux-libertine/LinLibertine_R.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
     font-weight: normal;
     font-style: normal;
@@ -12,6 +14,7 @@
 
 @font-face {
     font-family: 'Linux Libertine';
+    src: url('/assets/fonts/linux-libertine/LinLibertine_RI-webfont.eot'); /* IE9 Compat Mode */
     src: url('/assets/fonts/linux-libertine/LinLibertine_RI.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
     font-weight: normal;
     font-style: italic;
@@ -19,6 +22,7 @@
 
 @font-face {
     font-family: 'Linux Libertine';
+    src: url('/assets/fonts/linux-libertine/LinLibertine_RBI-webfont.eot'); /* IE9 Compat Mode */
     src: url('/assets/fonts/linux-libertine/LinLibertine_RBI.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
     font-weight: bold;
     font-style: italic;
@@ -26,6 +30,7 @@
 
 @font-face {
     font-family: 'Linux Libertine';
+    src: url('/assets/fonts/linux-libertine/LinLibertine_RB-webfont.eot'); /* IE9 Compat Mode */
     src: url('/assets/fonts/linux-libertine/LinLibertine_RB.otf') format('opentype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
     font-weight: bold;
     font-style: normal;
