--- a/templates/layouts/email.hbs
+++ b/templates/layouts/email.hbs
@@ -4,8 +4,29 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Småty Newsletter {{ title }}</title>
         <style type="text/css">
-        body {margin: 0; padding: 0; min-width: 100%!important;}
-        .content {width: 100%; max-width: 600px;}
+            body {
+                margin: 0;
+                padding: 0;
+                min-width: 100%!important;
+                font-family: Georgia, "Times New Roman", serif;
+                font-size: 16px;
+                line-height: 1.2;
+            }
+
+            #content {
+                width: 100%;
+                max-width: 600px;
+            }
+
+            .email-header {
+                text-align: right;
+            }
+
+            .email-footer {
+                font-size: 12px;
+                font-style: italic;
+                border-top: 2px solid #eee;
+            }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -13,7 +34,11 @@
         <table width="100%" bgcolor="#f6f8f1" border="0" cellpadding="0" cellspacing="0">
             <tr>
                 <td>
-                    <table class="content" align="center" cellpadding="0" cellspacing="0" border="0">
+                    <table align="center" cellpadding="0" cellspacing="0" border="0" id="content">
+                        <tr class="email-header"><td>
+                            <p>{{ now }}<br>
+                            Katrineholm</p>
+                        </td></tr>
                         <tr>
                             <td>
                                 {{#markdown}}
@@ -21,6 +46,14 @@
                                 {{/markdown}}
                             </td>
                         </tr>
+                        <tr class="email-footer"><td>
+                            <p>You are on this list because you signed up on <a href="http://smaty.se">the Småty site</a>.</p>
+
+                            <p><a href="*|UNSUB|*">Unsubscribe from this list </a></p>
+
+                            <p>*|REWARDS|*</p>
+
+                        </td></tr>
                     </table>
                 </td>
             </tr>
