--- a/templates/partials/character-profile.hbs
+++ b/templates/partials/character-profile.hbs
@@ -1,18 +1,26 @@
 <div class="character-profile">
     <h2>Profile</h2>
     <dl>
+        {{#if stories}}
+            <dt>Stories</dt>
+            {{#each stories}}
+            <dd class="group">{{ . }}</dd>
+            {{/each}}
+        {{/if}}
         {{#if names}}
-        <dt>Names</dt>
-        {{#each names}}
-        <dd class="group">{{ . }}</dd>
-        {{/each}}
+            <dt>Names</dt>
+            {{#each names}}
+            <dd class="group">{{ . }}</dd>
+            {{/each}}
         {{/if}}
         {{#if titles}}
-        <dt>Titles</dt>
-        {{#each titles}}
-        <dd class="group">{{ . }}</dd>
-        {{/each}}
+            <dt>Titles</dt>
+            {{#each titles}}
+            <dd class="group">{{ . }}</dd>
+            {{/each}}
         {{/if}}
+        <dt class="inline">Pronouns</dt>
+        <dd>{{ pronouns }}</dd>
         <dt class="inline">Era</dt>
         <dd>{{ era }}</dd>
         <dt class="inline">Status</dt>
@@ -26,10 +34,10 @@
         <dt class="inline">Allegiance</dt>
         <dd>{{ allegiance }}</dd>
         {{#if family}}
-        <dt>Family</dt>
-        {{#each family}}
-        <dd class="group">{{ . }}</dd>
-        {{/each}}
+            <dt>Family</dt>
+            {{#each family}}
+            <dd class="group">{{ . }}</dd>
+            {{/each}}
         {{/if}}
     </dl>
 </div>
