--- a/templates/layouts/index.hbs
+++ b/templates/layouts/index.hbs
@@ -26,6 +26,6 @@ layout: master
             {{#markdown}}
                 {% body %}
             {{/markdown}}
-            <a class="twitter-timeline" href="https://twitter.com/hashtag/smaty" data-widget-id="573949438126899200">#smaty Tweets</a>
+            {{ tweets "smaty"}}
     </main>
 </div>
